基准表支持分表策略
